[metadata]
name = mara
description = A framework for network services
long_description = file: README.rst
keywords = socket telnet http websocket
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
url = https://radiac.net/projects/mara/
project_urls =
    Documentation = https://radiac.net/projects/mara/documentation/
    Source = https://github.com/radiac/mara
    Tracker = https://github.com/radiac/mara/issues

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = --black --flake8 --mypy --cov=mara --cov-report=term --cov-report=html
asyncio_mode = auto

[coverage:run]
parallel=True

[flake8]
ignore = E123,E128,E203,E501,W503
max-line-length = 88
exclude = .tox,.git

[isort]
multi_line_output = 3
line_length = 88
known_first_party = mara
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .tox,.git

[mypy]
ignore_missing_imports = True

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox
